--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "uvicorn (>=0.34.0,<0.35.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "bcrypt (>=4.2.1,<5.0.0)",
-    "jinja2 (>=3.1.5,<4.0.0)"
+    "jinja2 (>=3.1.5,<4.0.0)",
+    "pytz (>=2025.1,<2026.0)"
 ]
 
 
