--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "pyjwt (>=2.10.1,<3.0.0)",
     "bcrypt (>=4.2.1,<5.0.0)",
     "jinja2 (>=3.1.5,<4.0.0)",
-    "pytz (>=2025.1,<2026.0)"
+    "pytz (>=2025.1,<2026.0)",
+    "pytest (>=8.3.4,<9.0.0)",
+    "httpx (>=0.28.1,<0.29.0)"
 ]
 
 
