--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,10 @@ dependencies = [
     "jinja2 (>=3.1.5,<4.0.0)",
     "pytz (>=2025.1,<2026.0)",
     "pytest (>=8.3.4,<9.0.0)",
-    "httpx (>=0.28.1,<0.29.0)"
+    "httpx (>=0.28.1,<0.29.0)",
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "sqlalchemy (>=2.0.38,<3.0.0)",
+    "databases (>=0.9.0,<0.10.0)"
 ]
 
 
