--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,30 @@
-annotated-types   0.7.0   Reusable constraint types to use with typing.Anno...
-anyio             4.8.0   High level compatibility layer for multiple async...
-click             8.1.8   Composable command line interface toolkit
-fastapi           0.115.7 FastAPI framework, high performance, easy to lear...
-h11               0.14.0  A pure-Python, bring-your-own-I/O implementation ...
-idna              3.10    Internationalized Domain Names in Applications (I...
-pydantic          2.10.6  Data validation using Python type hints
-pydantic-core     2.27.2  Core functionality for Pydantic validation and se...
-sniffio           1.3.1   Sniff out which async library your code is runnin...
-starlette         0.45.3  The little ASGI library that shines.
-typing-extensions 4.12.2  Backported and Experimental Type Hints for Python...
-uvicorn           0.34.0  The lightning-fast ASGI server.
+annotated-types==0.7.0 ; python_version >= "3.12"
+anyio==4.8.0 ; python_version >= "3.12"
+bcrypt==4.2.1 ; python_version >= "3.12"
+certifi==2025.1.31 ; python_version >= "3.12"
+click==8.1.8 ; python_version >= "3.12"
+colorama==0.4.6 ; platform_system == "Windows" and python_version >= "3.12" or sys_platform == "win32" and python_version >= "3.12"
+databases==0.9.0 ; python_version >= "3.12"
+fastapi==0.115.7 ; python_version >= "3.12"
+greenlet==3.1.1 ; python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.12"
+h11==0.14.0 ; python_version >= "3.12"
+httpcore==1.0.7 ; python_version >= "3.12"
+httpx==0.28.1 ; python_version >= "3.12"
+idna==3.10 ; python_version >= "3.12"
+iniconfig==2.0.0 ; python_version >= "3.12"
+jinja2==3.1.5 ; python_version >= "3.12"
+markupsafe==3.0.2 ; python_version >= "3.12"
+packaging==24.2 ; python_version >= "3.12"
+passlib==1.7.4 ; python_version >= "3.12"
+pluggy==1.5.0 ; python_version >= "3.12"
+pydantic-core==2.27.2 ; python_version >= "3.12"
+pydantic==2.10.6 ; python_version >= "3.12"
+pyjwt==2.10.1 ; python_version >= "3.12"
+pytest==8.3.4 ; python_version >= "3.12"
+python-multipart==0.0.20 ; python_version >= "3.12"
+pytz==2025.1 ; python_version >= "3.12"
+sniffio==1.3.1 ; python_version >= "3.12"
+sqlalchemy==2.0.38 ; python_version >= "3.12"
+starlette==0.45.3 ; python_version >= "3.12"
+typing-extensions==4.12.2 ; python_version >= "3.12"
+uvicorn==0.34.0 ; python_version >= "3.12"
