--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,32 @@
-[project]
+[tool.poetry]
 name = "authorization-service"
-version = "0.1.0"
+version = "0.3.0"
 description = "Веб-сервис авторизации"
-authors = [
-    {name = "VitArsl"}
-]
-license = {text = "none at the moment"}
+authors = ["VitArsl/Turgeney"]
+packages = [{ include = "app" }]
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = [
-    "fastapi (>=0.115.7,<0.116.0)",
-    "uvicorn (>=0.34.0,<0.35.0)",
-    "pyjwt (>=2.10.1,<3.0.0)",
-    "bcrypt (>=4.2.1,<5.0.0)",
-    "jinja2 (>=3.1.5,<4.0.0)",
-    "pytz (>=2025.1,<2026.0)",
-    "pytest (>=8.3.4,<9.0.0)",
-    "httpx (>=0.28.1,<0.29.0)",
-    "python-multipart (>=0.0.20,<0.0.21)",
-    "sqlalchemy (>=2.0.38,<3.0.0)",
-    "databases (>=0.9.0,<0.10.0)",
-    "passlib (>=1.7.4,<2.0.0)"
-]
 
+[tool.poetry.dependencies]
+python = "^3.12"
+fastapi = "^0.115.7"
+uvicorn = "^0.34.0"
+pyjwt = "^2.10.1"
+bcrypt = "^4.2.1"
+jinja2 = "^3.1.5"
+pytz = "^2025.1"
+pytest = "^8.3.4"
+httpx = "^0.28.1"
+python-multipart = "^0.0.20"
+sqlalchemy = "^2.0.38"
+databases = "^0.9.0"
+passlib = "^1.7.4"
+
+[tool.poetry.dev-dependencies]
+pytest = "^8.3.4"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+run = "app.main:app"
